@@ -284,8 +284,9 @@ Bug fixes
   called.  (Ruben Laguna, Uwe Schindler, Mike McCandless)
   
 * LUCENE-2417: IndexCommit did not implement hashCode() and equals() 
-  consitently. Now they both take Directory and version into consideration. 
-  (Shai Erera)
+  consitently. Now they both take Directory and version into consideration. In
+  addition, all of IndexComnmit methods which threw 
+  UnsupportedOperationException are now abstract. (Shai Erera)
 
 * LUCENE-2424: Fix FieldDoc.toString to actually return its fields
   (Stephen Green via Mike McCandless)
